force-app/main/default/objects/Application__c/fields/Applicationtype__c.field-meta.xml
<CustomField>
    <fullName>Applicationtype__c</fullName>
    <label>Applicationtype</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>new house</fullName>
            </value>
            <value>
                <fullName>under construction</fullName>
            </value>
            <value>
                <fullName>graduation</fullName>
            </value>
            <value>
                <fullName>pg studeis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>