force-app/main/default/objects/Application__c/fields/Firstname__c.field-meta.xml
<CustomField>
    <fullName>Firstname__c</fullName>
    <label>Firstname</label>
    <length>125</length>
    <type>Text</type>
</CustomField>