force-app/main/default/objects/Application__c/fields/phonenumber__c.field-meta.xml
<CustomField>
    <fullName>phonenumber__c</fullName>
    <label>phonenumber</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>