force-app/main/default/objects/Application__c/recordTypes/EDHOUSE.recordType-meta.xml
<RecordType>
    <fullName>EDHOUSE</fullName>
    <active>true</active>
    <label>EDHOUSE</label>
</RecordType>