force-app/main/default/objects/Application__c/recordTypes/EDUCATIONHOUSING.recordType-meta.xml
<RecordType>
    <fullName>EDUCATIONHOUSING</fullName>
    <active>true</active>
    <label>EDUCATIONHOUSING</label>
</RecordType>