force-app/main/default/objects/Application__c/listViews/BanTeam_Application.listView-meta.xml
<ListView>
    <fullName>BanTeam_Application</fullName>
    <filterScope>Queue</filterScope>
    <label>BanTeam</label>
    <queue>BanTeam</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>