force-app/main/default/objects/Application__c/listViews/JavaTeam_Application.listView-meta.xml
<ListView>
    <fullName>JavaTeam_Application</fullName>
    <filterScope>Queue</filterScope>
    <label>HydTeam</label>
    <queue>JavaTeam</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>